Horizontal scroll issue on mobile solved

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 html {
   font-size: 65.5%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
