--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -17,6 +17,7 @@
 html {
     font-size: 65.5%;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
